--- a/scss/agency.scss
+++ b/scss/agency.scss
@@ -11,9 +11,10 @@
 
 // Layout
 @import "layout/masthead.scss";
-@import "layout/services.scss";
+@import "layout/about.scss";
 @import "layout/portfolio.scss";
 @import "layout/timeline.scss";
+@import "layout/skills.scss";
 @import "layout/team.scss";
-@import "layout/contact.scss";
+@import "layout/recruit.scss";
 @import "layout/footer.scss";
